# rover

./: CMakeLists.txt  LICENSE.md  README.md  package.xml
config/: urdf.rviz
launch/: display-rviz.launch  rover.launch  scene-display.launch
meshes/: base_link.STL  base_link_collision.STL  left_leg.STL  left_sub_leg.STL  motor.STL  motor_collision.STL  ramp.STL  right_leg.STL  right_sub_leg.STL  wheel.STL  wheel_collision.STL
models/bumpers/: model.config  model.sdf
models/terrain/: model.config  model.sdf
models/terrain/materials/scripts/: terrain.material
sw-files/: Assem1.SLDASM  base.SLDPRT  motor_12V.SLDASM  motor_12V.SLDPRT  rocker-connector.sldprt  rockerA.SLDPRT  rockerB.SLDPRT  spacer.SLDPRT  wheel.SLDASM  wheel.SLDPRT
sw-files/minute-parts/: gearbox.SLDPRT  motor12v.SLDPRT  motorshaft.SLDPRT  tyre.SLDPRT  wheelrim.SLDPRT
urdf/: rover.xacro
worlds/: mars_terrain.world
